--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-  /* background-color: #ffffff; */
+  background-color: #ffffff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -54,4 +54,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
